# pipelines

./: .bumpversion.cfg  .cspell.json  .eslintrc.yml  .execs.yml  .prettierignore  .quickdocs.yml  .template.yml  Gruntfile.js  README.md  buildbot.tac  master.cfg  package-lock.json  package.json  routines.yml  setup.cfg  setup.py  state.sqlite
architects/: __init__.py  builders.py  changes.py  db.py  protocols.py  web.py  workers.py
clients/: __init__.py  vault.py
compose/: dev.docker-compose.yml
compose/tokens/master/: token.json
compose/tokens/postgres/: token.json
compose/tokens/worker/: token.json
docker/: master.Dockerfile  postgres.Dockerfile  vault.Dockerfile  worker.Dockerfile
docker/builders/: dev.build.sh
docker/compose/: dev.docker-compose.yml
docs/: conf.py  index.rst
grunt/: clean.yml  copy.yml  exec.yml
master/: Dockerfile  __main__.py  client.py  master.cfg
node-worker/: Dockerfile  tsconfig.json
pipelines/: token.py  vault.py
postgres/: Dockerfile  __main__.py
python-worker/: Dockerfile  __main__.py
registration/: __init__.py  client.py  environ.py
scripts/: dev.build.sh  docker-build.sh
src/: eslint.json  tsconfig.json
src/architects/: __init__.py  builders.py  changes.py  schedulers.py  secrets.py  web.py  workers.py
src/static/: master.cfg
tests/: test_paths.py
vault/: Dockerfile  __main__.py  client.py  config.hcl  policy.py
worker/: Dockerfile  __main__.py  node.Dockerfile  python.Dockerfile
