[metadata]
name = pipelines
version = 0.1.0

description = Integrated Buildbot clients capable of distributing worker credentials.
url = https://github.com/JoelLefkowitz/pipelines

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    subprocess
    pipe
    stdin
    stdout
    stderr

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Community work
status = In development
homepage = https://joellefkowitz-pipelines.readthedocs.io

languages = 
    Python

frameworks =
    Buildbot
    Vault

paradigms = 
    Containerised microservices

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    